--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-cayman
+title: "Bradly's Stuff" 
+locale: "zh-TW" 
+description: "An amazing website." 
+url: "https://linbei9487.github.io" 
