--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ title: "Bradly's Stuff"
 locale: "zh-TW" 
 description: "An amazing website." 
 url: "https://linbei9487.github.io" 
+plugins:
+  - jekyll-sitemap
